--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@auth0/auth0-spa-js": "^1.7.0",
     "@capacitor/core": "2.0.1",
     "@ionic-native/core": "^5.0.7",
+    "@ionic-native/native-storage": "^5.24.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
