Integrado mapa en el tab Mapas de main (/main). Limpieza de código en profile, login, service de usuario, etc.

--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,7 +1,8 @@
 {
   "name": "tenisfrontendionic",
   "integrations": {
-    "capacitor": {}
+    "capacitor": {},
+    "cordova": {}
   },
   "type": "angular"
 }
