--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@auth0/auth0-spa-js": "^1.7.0",
     "@capacitor/core": "2.0.1",
     "@ionic-native/core": "^5.0.7",
+    "@ionic-native/geolocation": "^5.25.0",
+    "@ionic-native/native-geocoder": "^5.25.0",
     "@ionic-native/native-storage": "^5.24.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
@@ -30,6 +32,7 @@
     "core-js": "^2.5.4",
     "crypto": "^1.0.1",
     "crypto-random-string": "^3.2.0",
+    "leaflet": "^1.6.0",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
@@ -44,6 +47,7 @@
     "@ionic/angular-toolkit": "^2.1.1",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/leaflet": "^1.5.12",
     "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
