--- a/package.json
+++ b/package.json
@@ -28,12 +28,16 @@
     "@ionic/angular": "^5.0.0",
     "@material/list": "^6.0.0",
     "@types/socket.io-client": "^1.4.32",
+    "angular-google-charts": "^1.1.4",
     "bootswatch": "^4.4.1",
+    "chart.js": "^2.9.3",
     "core-js": "^2.5.4",
     "crypto": "^1.0.1",
     "crypto-random-string": "^3.2.0",
     "leaflet": "^1.6.0",
     "ng-socket-io": "^0.2.4",
+    "ng2-charts": "^2.3.2",
+    "ng2-google-charts": "^6.0.0",
     "rxjs": "~6.5.1",
     "rxjs-compat": "^6.5.5",
     "socket.io-client": "^2.3.0",
@@ -41,7 +45,7 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.26",
+    "@angular-devkit/build-angular": "^0.803.25",
     "@angular/cli": "~8.3.23",
     "@angular/compiler": "~8.2.14",
     "@angular/compiler-cli": "~8.2.14",
