--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "crypto": "^1.0.1",
     "crypto-random-string": "^3.2.0",
     "leaflet": "^1.6.0",
+    "moment": "^2.27.0",
     "ng-socket-io": "^0.2.4",
     "rxjs": "~6.5.1",
     "rxjs-compat": "^6.5.5",
