--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@material/list": "^6.0.0",
     "@types/socket.io-client": "^1.4.32",
     "bootswatch": "^4.4.1",
+    "cordova-android": "8.1.0",
     "core-js": "^2.5.4",
     "crypto": "^1.0.1",
     "crypto-random-string": "^3.2.0",
@@ -53,6 +54,12 @@
     "@types/leaflet": "^1.5.12",
     "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
+    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-ionic-keyboard": "^2.2.0",
+    "cordova-plugin-ionic-webview": "^4.2.1",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-whitelist": "^1.3.3",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
@@ -65,5 +72,20 @@
     "tslint": "~5.15.0",
     "typescript": "~3.4.3"
   },
-  "description": "Rackets4All-IonicFrontend"
+  "description": "Rackets4All-IonicFrontend",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {
+        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
+      },
+      "cordova-plugin-ionic-keyboard": {}
+    },
+    "platforms": [
+      "android"
+    ]
+  }
 }
